--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9EDC7F4B41550D6D7EF953929135968D
 ProjectName=Third Person BP Game Template
+CompanyName=Team Dager Jokers
+Homepage=teamdagerjokers.org
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
