--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=kursova
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MM/MM.MM
-GameDefaultMap=/Game/MM/MM.MM
+EditorStartupMap=/Game/main_manu/MM.MM
+GameDefaultMap=/Game/main_manu/MM.MM
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -11,6 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/OnlineGI.OnlineGI_C
+ServerDefaultMap=/Game/MAP/Maze.Maze
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
